export const filterResponse = {
  meals: [
    {
      strMeal: 'Beef and Mustard Pie',
      strMealThumb:
        'https://www.themealdb.com/images/media/meals/sytuqu1511553755.jpg',
      idMeal: '52874',
    },
    {
      strMeal: 'Beef and Oyster pie',
...
