...
      strCategoryThumb: 'https://www.themealdb.com/images/category/pasta.png',
      strCategoryDescription:
        'Pasta is a staple food of traditional Italian cuisine, with the first reference dating to 1154 in Sicily.\r\n\r\nAlso commonly used to refer to the variety of pasta dishes, pasta is typically a noodle made from an unleavened dough of a durum wheat flour mixed with water or eggs and formed into sheets or various shapes, then cooked by boiling or baking. As an alternative for those wanting 
    },
    {
      idCategory: '7',
      strCategory: 'Pork',
      strCategoryThumb: 'https://www.themealdb.com/images/category/pork.png',
      strCategoryDescription:
        'Pork is the culinary name for meat from a domestic pig (Sus scrofa domesticus). It is the most commonly consumed meat worldwide,[1] with evidence of pig husbandry dating back to 5000 BC. Pork is eaten both freshly cooked and preserved. Curing extends the shelf life of the pork products. Ham, smoked pork, gammon, bacon and sausage are examples of preserved pork. Charcuterie is the branch o
    },
    {
      idCategory: '8',
...
